--- a/first_chart.html
+++ b/first_chart.html
@@ -12,20 +12,22 @@
 
   <h1>My first chart with Highcharts</h1>
 
-  <p>By Your Name Here</p>
+  <p>By Maija Chover</p>
 
   <!-- add the div BELOW this comment -
        the 'container' DIV must be EMPTY   -->
 
+<div id="container"></div>
 
 
-
-  <p>There is a chart <em>above</em> this paragraph.</p>
+<p>There is a chart <em>above</em> this paragraph.</p>
 
 
   <!-- add the SCRIPT elements BELOW this comment ...
        ALL SCRIPTS GO BELOW THIS LINE -->
-
+  <script src="scripts/highcharts.js"></script>
+  <script src="scripts/themes/sunset.js"></script>
+  <script src="scripts/first_chart.js"></script>
 
 
 
